Richie Add: Research Studies & Comparisons

--- a/WQD7003_DataAnalytics_GroupProject.ipynb
+++ b/WQD7003_DataAnalytics_GroupProject.ipynb
@@ -28377,6 +28377,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Research Studies and Comparison\n",
+        "\n",
+        "| **Article**   | **Study Summary**              | **Comparison**                                                                     |\n",
+        "| ------------ | ---------------------------------- | ---------------------------------------------------------------------------------------- |\n",
+        "| **Clinical features predicting COVID-19 mortality risk**   | retrospective literature review that identifies key clinical and laboratory features associated with increased COVID-19 mortality risk based on existing global research such as old age,  diabetes, hypertension       | We quantified the importance of the features with statistical techniques                     |\n",
+        "| **A gradient boosting-based mortality prediction model for COVID-19 patients**   | For the balanced dataset with SMOTE approach, a stacking-based hybrid model that combines the XGBoost, LightGBM, and CatBoost algorithms gives the best result. 99.02% accuracy, 98.51% precision, 99.50% recall, 99.00% f-score, 99.03% AUC                | Due to different dataset, we decide to use undersampling to reduce the training time and potential overfitting to the minority class, we obtain a satisfactory albeit slightly worse result  |\n",
+        "|  **Scoring systems for predicting mortality for severe patients with COVID-19** | developed a COVID-19 Scoring System (CSS) to predict in-hospital mortality among severe COVID-19 patients. They used LASSO binary logistic regression to select key predictors from 52 clinical variables, followed by multivariable logistic regression to finalize the model. The CSS was based on five independent risk factors: age, coronary heart disease (CHD), lymphocyte percentage (LYM%) < 8%, procalcitonin (PCT) > 0.15 ng/mL, and D-dimer (DD) > 0.5 µg/mL. Each factor was assigned points (e.g., age >75 = 2 points, PCT >0.15 = 2 points), and patients were classified as low-risk (0–2 points) or high-risk (>2 points). The scoring system achieved excellent predictive performance, with an AUC of 0.919 in the training cohort and 0.938 in the validation cohort. Mortality was significantly higher in the high-risk group (81.1%) compared to the low-risk group (10.0%), indicating strong discrimination and clinical utility.               | We aimed to build a predictive model that works on medical history of the patients in urgent situations, instead of specific measurements of certain criterias in the patients.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "hLtjTGwdFffT"
       },
