--- a/WQD7003_DataAnalytics_GroupProject.ipynb
+++ b/WQD7003_DataAnalytics_GroupProject.ipynb
@@ -187,7 +187,7 @@
         "\n",
         "### 3. Pregnancy Data Characteristics Did Not Affect COVID-19 Mortality Risk:\n",
         "\n",
-        "- Throughout the project, the assumption is make that pregnancy data characteristics would not increase, decrease or affect the risk of death from COVID-19.\n"
+        "- Throughout the project, the assumption is make that pregnancy data characteristics would not affect the risk of death from COVID-19.\n"
       ]
     },
     {
@@ -3505,7 +3505,7 @@
       },
       "source": [
         "#### Removing Inaccurate Data\n",
-        "Remove inaccurate data that leads to incorrect information. (Eg. male pregnancy). Removing male and female pregnancy data was based on an assumption. The fact that, in the current case 209,489 male pregnancy data are missing with status 97, and directly impute the data as 0 would lead to data quality issues because these 97 missing data cannot be defined as other meanings and account for a large proportion of the male dataset. In addition, directly excluding these data would lead to data bias because the team assumed that pregnancy would not affect the results of COVID-19 mortality."
+        "Remove inaccurate data that leads to incorrect information. (Eg. male pregnancy). Removing male and female pregnancy data was based on an assumption. The fact that, in the current case 209,489 male pregnancy data are missing with status '97', and directly impute the data as 0 would lead to data quality issues because these missing data labelled as '97' cannot be defined as other meanings and account for a large proportion of the male dataset. In addition, directly excluding these data would lead to data bias because the team assumed that pregnancy would not affect the COVID-19 mortality result."
       ]
     },
     {
