--- a/WQD7003_DataAnalytics_GroupProject.ipynb
+++ b/WQD7003_DataAnalytics_GroupProject.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# Group Assignment: WQD7003 DATA ANALYTICS\n",
-        "# Predicting Mortality Risk of COVID-19 Patients\n",
+        "# Predicting the survival status of COVID-19 patient\n",
         "\n",
         "### Group Members:\n",
         "\n",
