--- a/WQD7003_DataAnalytics_GroupProject.ipynb
+++ b/WQD7003_DataAnalytics_GroupProject.ipynb
@@ -35,7 +35,7 @@
       },
       "source": [
         "# Business Understanding\n",
-        "This project aims to develop a classification model to predict the mortality risk of COVID-19 patients. By identifying high-risk individuals early, healthcare providers can prioritize care and allocate resources more effectively, ultimately improving patient outcomes and reducing fatality rates."
+        "This project aims to develop a classification model to predict the survival status of COVID-19 patients. By identifying high-risk individuals early, healthcare providers can prioritize care and allocate resources more effectively, ultimately improving patient outcomes and reducing fatality rates."
       ]
     },
     {
