Commit: - Change objective and data understanding from code to markdown - Update confusion matrices

--- a/WQD7003_DataAnalytics_GroupProject.ipynb
+++ b/WQD7003_DataAnalytics_GroupProject.ipynb
@@ -27628,12 +27628,11 @@
    "source": [
     "The confusion matrices across all models show how well each classifier performs in distinguishing between the \"Positive\" and \"Negative\" classes.\n",
     "\n",
-    "*  Logistic Regression has the lowest number of false positives (2532) but relatively more false negatives (1548), suggesting slightly weaker performance in identifying the negative class correctly.\n",
+    "*  Logistic Regression has the lowest number of false positives (2559) but relatively more false negatives (1556), suggesting slightly weaker performance in identifying the negative class correctly.\n",
     "\n",
-    "*   Random Forest has the highest number of false positives 2913 and false negatives to just 895, indicating slightly weaker performance in identifying the false positive class correctly.\n",
+    "*   Random Forest has the highest number of false positives 2927 and false negatives to just 914, indicating slightly weaker performance in identifying the false positive class correctly.\n",
     "\n",
-    "*   XGBoost, LightGBM, and CatBoost all demonstrate very strong performance, with false positives around 2814–2852 and false negatives between 889–951. Among them, Catboost achieves the lowest false negative count (889), while XGBoost has a slightly lower false positive count (2814).\n",
-    "\n"
+    "*   XGBoost, LightGBM, and CatBoost all demonstrate very strong performance, with false positives around 2868–2900 and false negatives between 910-928. Among them, Catboost achieves the lowest false negative count (910), while XGBoost has a slightly lower false positive count (2868)."
    ]
   },
   {
